HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallArgCount/Expected.uv
//! Expected diagnostic metadata for the CallArgCount rejected-source specimen.

expectedDiagnostic("E-SEM-2532", "rule.16.Call-ArgCount-Err")
